# CMakeObjcConfiguration

./: CMakeCache.txt  CMakeLists.txt  HelloWorld  Makefile  cmake_install.cmake  compile_commands.json  hello.m
src/: Person.h  Person.m  Worker.h  Worker.m  anEvklidAlgorithm.h  defines.h  hello.m
vim_conf_files/: .vimrc  .ycm_extra_conf.py
